// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package resolve;

import "gapis/gfxapi/gfxapi.proto";
import "gapis/service/path/path.proto";
import "gapis/service/service.proto";

message ContextListResolvable {
	path.Capture capture = 1;
}

message FollowResolvable {
	path.Any path = 1;
}

message FramebufferAttachmentResolvable {
	path.Device device = 1;
	path.Command after = 2;
	gfxapi.FramebufferAttachment attachment = 3;
	service.RenderSettings settings = 4;
}

message FramebufferChangesResolvable {
	path.Capture capture = 1;
}

message FramebufferAttachmentDataResolvable {
	path.Device device = 1;
	path.Command after = 2;
	uint32 width = 3;
	uint32 height = 4;
	gfxapi.FramebufferAttachment attachment = 5;
	service.WireframeMode wireframe_mode = 6;
}

// Get resolves the object, value or memory at Path.
message GetResolvable {
	path.Any path = 1;
}

message HierarchiesResolvable {
	path.Capture capture = 1;
}

message IndexLimitsResolvable {
	uint64 indexSize = 1;
	uint64 count = 2;
	bool little_endian = 3;
	path.Blob data = 4;
}

message ReportResolvable {
	path.Capture capture = 1;
	path.Device device = 2;
}

message ResourcesResolvable {
	path.Capture capture = 1;
}

message ResourceDataResolvable {
	path.ResourceData path = 1;
}

message AllResourceDataResolvable {
	path.Command after = 1;
}

message ResourceMetaResolvable {
	path.ID id = 1;
	path.Command after = 2;
}

message GlobalStateResolvable {
	path.State path = 1;
}

message APIStateResolvable {
	path.State path = 1;
}

message SetResolvable {
	path.Any path = 1;
	service.Value value = 2;
}
